[package]
name = "vega_lite_3"
version = "0.2.4-dev"
authors = ["David Bernard <david.bernard.31@gmail.com>", "François Mockers <mockersf@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "rust api for vega-lite v3"
repository = "https://github.com/procyon-rs/vega_lite_3.rs"
readme = "README.md"
#category = ["visualization"]
keywords = ["visualization", "plot", "vega", "graphs", "charts"]

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
derive_builder = "0.9.0"
showata = {version = "0.2.0", optional = true}
anyhow = {version = "1.0.22", optional = true }
ndarray = {version = "0.13", features = ["serde"], optional = true}
csv = {version = "1.1", optional = true}

[dev-dependencies]
csv = "1.1"
ndarray-rand = "0.11"

[features]
show_vega = ["showata", "anyhow"]
default = ["show_vega", "csv", "ndarray"]
